--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Andrew Johnson <blackandred@users.noreply.github.com>
+Andrew Johnson <wesoly.krzysztofa@gmail.com>
 Free Man <admin@wolnosciowiec.org>
